done create new order

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,31 +54,31 @@
     </div>
     <div class="main-links">
       <ul>
-        <li>
+        <!-- <li>
           <a (click)="openSubmenu($event, 'orders')"
             ><img src="/assets/images/order-icon.svg" alt="" /> Orders</a
           >
-        </li>
+        </li> -->
         <li>
           <a (click)="openSubmenu($event, 'primaryOrders')"
-            ><img src="/assets/images/order-icon.svg" alt="" />Primary Orders</a
+            ><img src="/assets/images/order-icon.svg" alt="" />Sale Orders</a
           >
         </li>
-        <li>
+        <!-- <li>
           <a (click)="openSubmenu($event, 'salesmen')"
             ><img src="/assets/images/customer-icon.svg" alt="" /> Salesmen</a
           >
-        </li>
+        </li> -->
         <li>
           <a (click)="openSubmenu($event, 'inventory')"
             ><img src="/assets/images/inventory-icon.svg" alt="" /> Inventory</a
           >
         </li>
-        <li>
+        <!-- <li>
           <a (click)="openSubmenu($event, 'retailer')"
             ><img src="/assets/images/retailar-icon.svg" alt="" /> Retailer</a
           >
-        </li>
+        </li> -->
         <li>
           <a (click)="openSubmenu($event, 'reports')"
             ><img src="/assets/images/reports-icon.svg" alt="" /> Reports</a
