--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -248,14 +248,14 @@
 
     <div class="col-12 h_dash">
       <div class="row">
-        <div class="col-4">
+        <!-- <div class="col-4">
           <a [routerLink]="['/orders', 'counter-sale']"
             ><img src="assets/images/add-stock-01.svg" alt="" />
             <h2 class="HD-title">
               Add <span class="f-light"> Counter Sale</span>
             </h2>
           </a>
-        </div>
+        </div> -->
         <div class="col-4">
           <a [routerLink]="['/inventory', 'distributor-purchase']"
             ><img src="assets/images/add-order.svg" alt="" />
