distributor listing done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,12 @@
             ><img src="/assets/images/inventory-icon.svg" alt="" /> Inventory</a
           >
         </li>
+        <li>
+          <a [routerLink]="['distributor']"
+            ><img src="/assets/images/distributor-icon-white.svg" alt="" />
+            Distributors</a
+          >
+        </li>
         <!-- <li>
           <a (click)="openSubmenu($event, 'retailer')"
             ><img src="/assets/images/retailar-icon.svg" alt="" /> Retailer</a
