--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,7 +94,7 @@
         <!-- <li><a (click)="openSubmenu($event, 'payments')"><img src="/assets/images/payment-icon.svg" alt="" /> Payments</a></li> -->
       </ul>
     </div>
-    <div class="_user-nav">
+    <!-- <div class="_user-nav">
       <a href="#"
         ><img
           src="/assets/images/bell-icon-2.svg"
@@ -111,7 +111,7 @@
           alt="Setting"
           title="Setting"
       /></a>
-    </div>
+    </div> -->
     <div class="sidebar-BL">
       <ul>
         <li>
