--- a/src/app/modules/orders/components/orders-list/orders-list.component.html
+++ b/src/app/modules/orders/components/orders-list/orders-list.component.html
@@ -29,7 +29,10 @@
                 <div class="p-10" style="border-bottom: solid 2px #000">
                   <div class="row m-0">
                     <div class="col-8 OrderLogo">
-                      <img src="assets/images/sell-360.svg" alt="" />
+                      <img
+                        src="../../../../../assets/images/sell-360.svg"
+                        alt=""
+                      />
                     </div>
                     <div class="col-4 ord-no">
                       Order # <strong>05485</strong>
