--- a/src/app/modules/retailer/components/retailer-profile/retailer-profile.component.html
+++ b/src/app/modules/retailer/components/retailer-profile/retailer-profile.component.html
@@ -363,7 +363,7 @@
                             <div class="card mb-20">
                                 <div class="p-10" style="border-bottom: solid 2px #000">
                                     <div class="row m-0">
-                                        <div class="col-8 OrderLogo"> <img src="/assets/images/sell-360.svg" alt="" />
+                                        <div class="col-8 OrderLogo"> <img src="../../../../../assets/images/sell-360.svg" alt="" />
                                         </div>
                                         <div class="col-4 ord-no"> Invoice#
                                             <strong>{{orderDetail?.invoice_number}}</strong>
